# fastapi-protobunny-example

./: .gitignore  Makefile  README.md  pyproject.toml
chat-app/: __init__.py  main.py  worker.py
chat-app/chatlib/: __init__.py
chat-app/chatlib/chat/: __init__.py
chat-app/chatlib/tasks/: __init__.py
chat-app/templates/: index.html
messages/: chat.proto  tasks.proto
