[project]
name = "fastapiprotobunny"
version = "0.1.0"
description = "A FastAPI chat app that uses protobunny with redis"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.126.0",
    "uvicorn[standard]>=0.38.0",
    "protobunny[redis]>=0.1.2",
    "aiosqlite>=0.22.1",
]
[tool.protobunny]
messages-directory = "messages"
messages-prefix = "acme"
generated-package-name = "chatlib"
generated-package-root = "./chat-app/"
backend = "redis"
mode = "async"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
